# hello-bevy-web

./: Cargo.toml  README.md  compile_and_serve.sh  compile_release.sh  index.html
.cargo/: config.toml
src/: main.rs
